packages/core/src/lib/middleware/tests/app/modules/error/controllers/site/errorHandlerTest/errorInAsync.js
const axios = require('axios');

module.exports = async (request, response, delegates) => {
  await axios.get('https://deelay.me/500/https://picsum.photos/200/300');
  undefined.b = 1;
};
